syntax = "proto3";

option csharp_namespace = "GrpcAPI";

import "shared.proto";
import "collection.proto";

service Database {
    rpc CreateCollection (CreateCollectionRequest) returns (SuccessResponse);
    rpc CreateCollectionIfNotExist (CreateCollectionRequest) returns (SuccessResponse);
    rpc DeleteCollection (DeleteCollectionRequest) returns (SuccessResponse);
    rpc HasCollection (HasCollectionRequest) returns (HasCollectionResponse);
    rpc ListCollections (ListCollectionsRequest) returns (ListCollectionsResponse);
}

message CreateCollectionRequest {
    SuccessResponseCode code = 1;
    optional string error = 2;
     string database = 3;
    string name = 4;
    optional uint32 pageSize = 5;
    CollectionKeyType keyType = 6;
    ValueEncodingType valueType = 7;
    bool isArray = 8;
    CompressionAlgorithm compressionAlgorithm = 9;
}

message DeleteCollectionRequest {
    string database = 1;
    string name = 2;
}

message HasCollectionRequest {
    string database = 1;
    string name = 2;
}

message HasCollectionResponse {
    bool hasCollection = 1;
  optional string error = 2;

}

message ListCollectionsRequest {
    string database = 1;
}

message ListCollectionsResponse {
    repeated string names = 1;
    optional string error = 2;
}